# briolette

./: Cargo.toml  README.md  TODO.txt
docs/design/: README.md  concepts.md  interactions.uml  theory_of_operation.md
docs/design/architecture/credentials/: credentials.md  trust_hierarchy_class.uml
docs/design/explainers/: README.md  introduction.html  introduction.md  technical_overview.html  technical_overview.md  wallets.html  wallets.md
src/: README.md  utils.sh
src/clerk/: Cargo.toml
src/clerk/src/: client.rs  epoch_generate.rs  lib.rs  server.rs  server_main.rs  tonic_support.rs
src/crypto/: Cargo.toml  build-deps.sh  build.rs  libecdaa.patch
src/crypto/src/: lib.rs  v0.rs  v0_wrapper.c
src/crypto/testdata/: issuer.sk  member.pk  nonce
src/mint/: Cargo.toml
src/mint/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/proto/: Cargo.toml  build.rs
src/proto/proto/: amount_type.proto  clerk.proto  common.proto  mint.proto  receiver.proto  registrar.proto  swapper.proto  token.proto  tokenmap.proto  validate.proto
src/proto/src/: lib.rs
src/proto/src/briolette/: clerk.rs  mod.rs  token.rs
src/receiver/: Cargo.toml
src/receiver/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/registrar/: Cargo.toml
src/registrar/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/simulation/absim/: Cargo.toml
src/simulation/absim/examples/: basic.rs  ecash.rs
src/simulation/absim/src/: clients.rs  extras.rs  lib.rs
src/simulation/briolettesim/: Cargo.toml  README.md
src/simulation/briolettesim/src/: main.rs
src/simulation/levy_distr/: Cargo.toml
src/simulation/levy_distr/src/: lib.rs
src/simulation/rand_flight/: Cargo.toml
src/simulation/rand_flight/examples/: viz.rs
src/simulation/rand_flight/src/: lib.rs
src/swapper/: Cargo.toml
src/swapper/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/tokenmap/: Cargo.toml
src/tokenmap/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/validate/: Cargo.toml
src/validate/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/wallet/: Cargo.toml
src/wallet/docs/: registration.uml
src/wallet/src/: lib.rs
