[workspace]
members = ["src/*/"]
exclude = ["src/simulation"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Briolette Authors"]
description = "an experimental framework for researching direct-exchange digital currency designs"
documentation = "https://github.com/google/briolette"
