[package]
name = "briolette-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# v0: native wrapping
libc = "0.2"

# For local storage serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"
