[package]
name = "briolette-mint"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Validate gRPC server
name = "briolette-mint-server"
path = "src/server_main.rs"


[[bin]] # Bin to run the Validate gRPC client
name = "briolette-mint-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12" }
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
briolette-crypto = { path = "../crypto", version = "*" }
briolette-proto = { path = "../proto", version = "*" }
bytes = { version = "1.4.0", features = ["std"] }
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_info"]}
# Must match p256 version since RecoveryId isn't properly accessible.
ecdsa = { version = "0.15.1", features = [ "signing", "verifying", "der", "pem", "pkcs8" ] }
p256 = { version = "0.12.0", features = ["ecdsa", "pem", "ecdsa-core"] }
rand_core = { version = "0.6.4", features = [ "getrandom"] }
chrono = { version = "0.4.23", features = [] }
digest = "0.10.6"
sha2 = "0.10.6"
rand = "0.8.5"
stderrlog = "0.5.4"
# Used to ensure p256 dependency features
elliptic-curve = { version = "0.13.1", features = ["pkcs8", "std", "pem"] }
clap = { version = "4.3.2", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"
