[package]
name = "briolette-registrar"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Validate gRPC server
name = "briolette-registrar-server"
path = "src/server_main.rs"


[[bin]] # Bin to run the Validate gRPC client
name = "briolette-registrar-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12" }
prost = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
briolette-proto = { path = "../proto", version = "*" }
briolette-crypto = { path = "../crypto", version = "*" }
log = "0.4.17"
# client: hwid nonce
sha256 = "1.1.2"
bytes = "1.4.0"
clap = { version = "4.3.2", features = ["derive"] }
stderrlog = "0.5.4"

[build-dependencies]
tonic-build = "0.8"

