[package]
name = "briolette-tokenmap"
version = "0.1.0"
edition = "2021"


[[bin]] # Bin to run the Validate gRPC server
name = "briolette-tokenmap-server"
path = "src/server_main.rs"


[[bin]] # Bin to run the Validate gRPC client
name = "briolette-tokenmap-client"
path = "src/client.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
briolette-proto = { path = "../proto", version = "*" }
tonic = { version = "0.12" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
chrono = { version = "0.4.23", features = ["serde"] }
stderrlog = "0.5.4"
hex = "0.4.3"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_info"]}
rusqlite = { version = "0.28.0", features = ["chrono", "blob", "bundled"] }
tokio-rusqlite = "0.3.0"
clap = { version = "4.3.2", features = ["derive"] }
