[package]
name = "briolette-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
briolette-crypto = { path = "../crypto", version = "*" }
# For local storage serialization.
serde = { version = "1.0", features = ["derive"] }
http-serde = "1.1.3"
serde_json = "1.0"
http = "0.2.11"  # matches tonic
tonic = "0.12"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.64"
log = "0.4.17"
# client: hwid nonce
sha256 = "1.1.2"
rand = "0.8.5"
sha2 = "0.10.6"
p256 = "0.12.0"
briolette-proto = { path = "../proto", version = "*" }
chrono = "0.4.23"
futures-util = { version = "0.3.26", features = ["tokio-io"] }
tempdir = "0.3.7"
tokio-stream = { version = "0.1.12", features = ["net"] }


[dev-dependencies]
tokio-test = "*"
briolette-clerk = { path = "../clerk", version = "*" }
briolette-registrar = { path = "../registrar", version = "*" }
briolette-tokenmap = { path = "../tokenmap", version = "*" }
briolette-mint = { path = "../mint", version = "*" }
briolette-validate = { path = "../validate", version = "*" }
pretty_assertions = "1"
stderrlog = "0.5.4"
glob = "0.3.1"

[build-dependencies]
tonic-build = "0.8"
