[package]
name = "absim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
fnv = "1.0.7"
rand = "0.8.5"
rand_distr = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
