[package]
name = "briolette-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
absim = { path = "../absim", version = "0.1.0" }
levy_distr = { path = "../levy_distr", version = "0.1.0" }
rand_flight = { path = "../rand_flight", version = "0.1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
